fixed dropdown overflow issue, updated search icon color

--- a/react-delegationdashboard/src/assets/styles/_elements.scss
+++ b/react-delegationdashboard/src/assets/styles/_elements.scss
@@ -49,14 +49,13 @@
       max-width: 42rem;
     }
   }
+  .dropdown {
+    position: unset !important;
+  }
 }
 
 label {
   @include font-size(80%);
-}
-
-.table-overflow {
-  overflow: inherit;
 }
 
 .fa-spin {
